# logica_api

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  data.csv  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 90b49e02fb83_initial_migrations.py  b3f5b2dbc0ed_initial_migrations.py
data/: __init__.py  branch.json  client.json  product.json
logica_api/: __init__.py  config.py  main.py
logica_api/models/: __init__.py  branch.py  client.py  exceptionlog.py  inventory.py  mixins.py  product.py  uploads.py
logica_api/routes/: __init__.py  inventory.py
logica_api/schemas/: branch.py  client.py  exceptionlog.py  inventory.py  product.py  uploads.py
logica_api/services/: inventory.py
logica_api/tasks/: monitor.py  process_csv.py
